fix intro paragraph spacing

--- a/app/sass/_home.scss
+++ b/app/sass/_home.scss
@@ -88,7 +88,7 @@
 // instead of <p> to avoid being unorphanized();
 .purpose{
   @extend %sans-serif;
-  margin: 1.2rem 0 2xrem;
+  margin: 1.2rem 0 2rem;
   width: 103%;
   max-width: 50rem;
   font-size: 2.1rem;
