--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -691,7 +691,7 @@ p, a, h1, h2, h3, h4, .purpose, .logo {
       margin-left: -1rem; } }
 
 .purpose {
-  margin: 1.2rem 0 2xrem;
+  margin: 1.2rem 0 2rem;
   width: 103%;
   max-width: 50rem;
   font-size: 2.1rem;
